--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <a href="Pages/modals.html" class="text-2xl">Модальные окна</a>
     <a href="Pages/nurseProfile.html" class="text-2xl">Профиль медсестры</a>
     <a href="Pages/completeOrder.html" class="text-2xl">Оформление заказа</a>
+    <a href="Pages/freeOrders.html" class="text-2xl">Свободные заказы</a>
 </body>
 </html>
