--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <a href="Pages/nurseProfile.html" class="text-2xl">Профиль медсестры</a>
     <a href="Pages/completeOrder.html" class="text-2xl">Оформление заказа</a>
     <a href="Pages/freeOrders.html" class="text-2xl">Свободные заказы</a>
+    <a href="Pages/finance.html" class="text-2xl">Финансы</a>
 </body>
 </html>
