--- a/Pages/finance.html
+++ b/Pages/finance.html
@@ -105,6 +105,122 @@
                                 <p class="self-end text-[#FF7700] font-medium">+12%</p>
                             </div>
                         </div>
+                        <div class="w-full p-[18px] rounded-[12px] shadow-[0px_0px_20px_0px_#0000001A] flex flex-col gap-10 text-[15px] leading-[18px]">
+                            <div>
+                                <p class="text-2xl leading-[28.8px] font-medium">945 000 ₽</p>
+                                <p>За 2023 год</p>
+                            </div>
+                            <div class="flex items-end gap-5 justify-between">
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[131px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Янв</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[164px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Февр</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[144px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Март</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[222px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Апр</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[175px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Май</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[251px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Июнь</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[222px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Июль</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[89px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Авг</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[155px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Сент</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[213px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Окт</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[237px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Нояб</p>
+                                </div>
+                                <div class="flex flex-col gap-4 items-center">
+                                    <div class="relative w-[58px] h-[175px] rounded-[12px] transition-all duration-500 bg-[#E5E5E5] hover:bg-[#FF00664D] group">
+                                        <div class="absolute left-0 -top-14 z-[2] whitespace-nowrap rounded-[12px] text-[18px] leading-[21.6px] opacity-0 transition-all duration-500 group-hover:opacity-100 p-2.5 text-white bg-[#566166] shadow-[0px_0px_20px_0px_#0000001A]">
+                                            <span>95 000 ₽</span>
+                                            <img src="../Assets/Images/payment/rectangle.png" alt="" class="absolute -bottom-[5px] left-5 z-[2]">
+                                        </div>
+                                    </div>
+                                    <p class="font-semibold">Дек</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="flex flex-col gap-5">
